// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`datasource/gitlab-releases/index getReleases returns releases from custom registry 1`] = `
Object {
  "registryUrl": "https://gitlab.company.com",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "registryUrl": "https://gitlab.company.com",
      "releaseTimestamp": "2021-01-01T00:00:00.000Z",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "registryUrl": "https://gitlab.company.com",
      "releaseTimestamp": "2021-03-01T00:00:00.000Z",
      "version": "v1.1.0",
    },
  ],
  "sourceUrl": "https://gitlab.company.com/some/dep2",
}
`;

exports[`datasource/gitlab-releases/index getReleases returns releases from default registry 1`] = `
Object {
  "registryUrl": "https://gitlab.com",
  "releases": Array [
    Object {
      "gitRef": "v1.0.0",
      "registryUrl": "https://gitlab.com",
      "releaseTimestamp": "2021-01-01T00:00:00.000Z",
      "version": "v1.0.0",
    },
    Object {
      "gitRef": "v1.1.0",
      "registryUrl": "https://gitlab.com",
      "releaseTimestamp": "2021-03-01T00:00:00.000Z",
      "version": "v1.1.0",
    },
  ],
  "sourceUrl": "https://gitlab.com/some/dep2",
}
`;
